Cron Job process and Football Dailyworker and Homepage adjustments

--- a/app/views/football_teams/_set.html.erb
+++ b/app/views/football_teams/_set.html.erb
@@ -1,22 +1,23 @@
 <%if (@player_type == 'b') %>
 <%if (@team.active)%>
 	<img src="/images/RS_Green_Button10.png" alt="Green Button">
-	<a href="/teams/showbatters?id=<%=@team._id%>"><font color=green>Player Priority</font></a>
+	<a href="/football_teams/showpriority?id=<%=@team._id%>"><font color=green>Set My Priority Rankings</font></a>
 	<br>&nbsp;&nbsp;&nbsp;
 	<span id="br_<%=@team._id%>"><a href="javascript:setup('<%=@team._id%>',false,'b')"><font color=#00AEEF>[Deactivate]</font></a></span>
 <%else%>
 	<img src="/images/RS_Red_Button10.png" alt="Red Button">
-	<a href="/teams/showbatters?id=<%=@team._id%>"><font color=red>Player Priority</font></a>
+	<a href="/football_teams/showpriority?id=<%=@team._id%>"><font color=red>Set My Priority Rankings</font></a>
 	<br>&nbsp;&nbsp;&nbsp;
 	<span id="br_<%=@team._id%>"><a href="javascript:setup('<%=@team._id%>',true,'b')"><font color=#00AEEF>[Activate]</font></a></span>
 <%end%>
 <%end%>
 <%if (@player_type == 'p') %>
 				<span id="pr_<%=@team._id%>">
-				<select class="MainSelect" id="freqselect_<%=@team._id%>" onchange="set_start_option('<%=@team._id%>',this,'p')">
-		    		<option class="MainOption" value="bench" <%=(@team.start_type=='bench')?'selected':''%>>Bench Inactive</option>
-		    		<option class="MainOption" value="priority" <%=(@team.start_type=='priority')?'selected':''%>>Highest Priority Sub</option>
-    				<option class="MainOption" value="projected" <%=(@team.start_type=='projected')?'selected':''%>>Highest Projected Sub</option>
+				<span style="color: #00AEEF; font: 11px Verdana, Geneva, sans-serif;">Swap Inactives Based On</span> <BR>
+				<select class="MainSelect" id="freqselect_<%=@team._id%>" onchange="set_start_option('<%=@team._id%>',this,'p')">		    		
+		    		<option class="MainOption" value="priority" <%=(@team.start_type=='priority')?'selected':''%>>My Priority Rankings</option>
+    				<option class="MainOption" value="projected" <%=(@team.start_type=='projected')?'selected':''%>>Highest Projected Points</option>
+    				<option class="MainOption" value="bench" <%=(@team.start_type=='bench')?'selected':''%>>None: Bench Only</option>
     			</select>
     			</span>
 <%end%>
