--- a/app/views/football_teams/show.html.erb
+++ b/app/views/football_teams/show.html.erb
@@ -17,7 +17,7 @@
 		<tr>
 		<td colspan="2" class="SideTitle">
 		Football Settings
-		<div class="SideTitleBrown">Set Priority Preferences</div>
+		<div class="SideTitleBrown">Set My Priority Rankings</div>
 		</td>
 		</tr>
 		<tr>
@@ -112,7 +112,7 @@
 <tr  class="nodrag nodrop">
 <td colspan="3" class="MainHeader">
 <br>
-Lineup Priority
+My Priority Ranking
 </td>
 <td colspan="2" align="right">
 	<span id="refresh_span" style="display:none; padding-right: 3px">Refreshing Team <img src="/images/refresh-animated.gif"></span>
@@ -122,12 +122,12 @@ Lineup Priority
 </thead>
 <tbody>
 <tr class="nodrag nodrop">
-<td class="MainTinyHeader">Move Priority</td>
+<td class="MainTinyHeader">Swap Priority</td>
 <td class="MainTinyHeader">Pos</td>
 <td class="MainTinyHeader">Player</td>
 
 <td class="MainTinyHeader">Opponent</td>
-<td class="MainTinyHeader">Proj Points</td>
+<td class="MainTinyHeader">Projected Points</td>
 
 </tr>
 
