--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -298,7 +298,16 @@ Dialog.alert({url: "/teams/manage?teamType="+type, options: {method: 'get'}},
 
 function reload_team(){
 	
-	if (!confirm('Are you sure you want to reload all teams?  You will lose all player roster settings if you continue.')) return;
+	var number_espn_teams = <%=@espn_teams.length%>;
+	var number_yahoo_teams = <%=@yahoo_teams.length%>;
+		
+	if ($('teamType').value=='ESPN' && number_espn_teams != 0) {
+		if (!confirm('Are you sure you want to reload all teams?  You will lose all player roster settings if you continue.')) return;	
+	}
+	if ($('teamType').value=='YAHOO' && number_yahoo_teams != 0) {
+		if (!confirm('Are you sure you want to reload all teams?  You will lose all player roster settings if you continue.')) return;	
+	}
+	
 	
 	$('manageAction').value = "R";
 	$('manage_team').request({
