Real Time Activation and ESPN Weekly League detection

--- a/app/views/teams/_set.html.erb
+++ b/app/views/teams/_set.html.erb
@@ -24,3 +24,16 @@
 	<span id="pr_<%=@team._id%>"><a href="javascript:setup('<%=@team._id%>',true,'p')"><font color=#00AEEF>[Activate]</font></a></span>
 <%end%>
 <%end%>
+<%if (@player_type == 'r') %>
+<%if (@team.real_time_batter)%>
+	<img src="/images/RS_Green_Button10.png" alt="Green Button">
+	<font color=green>Real Time Monitor</font>
+	<br>&nbsp;&nbsp;&nbsp;
+	<span id="rr_<%=@team._id%>"><a href="javascript:setup('<%=@team._id%>',false,'r')"><font color=#00AEEF>[Deactivate]</font></a></span>
+	<%else%>
+	<img src="/images/RS_Red_Button10.png" alt="Red Button">
+	<font color=red>Real Time Monitor</font>
+	<br>&nbsp;&nbsp;&nbsp;
+	<span id="rr_<%=@team._id%>"><a href="javascript:setup('<%=@team._id%>',true,'r')"><font color=#00AEEF>[Activate]</font></a></span>
+<%end%>
+<%end%>
