--- a/app/views/user/signup.html.erb
+++ b/app/views/user/signup.html.erb
@@ -50,13 +50,13 @@ Based On Your Preferences<br>
 <td colspan="1" class="HomeSections">
 Your Personal Roster Assistant<br>
 <div class="HomeSectionsBrown">
-RotoStarter will check football inactives for you every Sunday and will make roster substitutions on your behalf.
+RotoStarter will check baseball inactives for you daily and will make roster substitutions on your behalf.
 </div>
 </td>
 <td colspan="1" class="HomeSections">
-Get Your Sundays Back!<br>
+Set It and Forget It!<br>
 <div class="HomeSectionsBrown">
-Does your girlfriend get mad at you because you're always checking football inactives at lunch time?  Brunch with confidence.
+RotoStarter automates the manual task of logging in early every day just to start and bench your fantasy players.
 </div>
 </td>
 <td colspan="1" class="HomeSections">
